# grazjs-2023

./: .gitignore  Dockerfile  LICENSE  README.md  build.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  pipeline.yml
nodejs/demo/: package.json  tsconfig.json
nodejs/demo/__tests__/: playground-serde-wasm-bindgen.test.ts  playground-wasm-bindgen.test-d.ts  playground-wasm-bindgen.test.ts  playground-wasm-tsify.test.ts  utils.ts
nodejs/demo/wasm/: playground_serde_wasm_bindgen.d.ts  playground_serde_wasm_bindgen.js  playground_serde_wasm_bindgen_bg.wasm  playground_serde_wasm_bindgen_bg.wasm.d.ts  playground_wasm_bindgen.d.ts  playground_wasm_bindgen.js  playground_wasm_bindgen_bg.wasm  playground_wasm_bindgen_bg.wasm.d.ts  playground_wasm_tsify.d.ts  playground_wasm_tsify.js  playground_wasm_tsify_bg.wasm  playground_wasm_tsify_bg.wasm.d.ts
nodejs/scripts/: index.mjs  package.json  utils.mjs
rust/: .rustfmt.toml  Cargo.toml  rust-toolchain.toml
rust/playground-serde-wasm-bindgen/: Cargo.toml
rust/playground-serde-wasm-bindgen/src/: functions.rs  lib.rs  types.rs
rust/playground-serde-wasm-bindgen/src/functions/: enum_ast.rs  map.rs  number.rs  option.rs  result.rs  scalars.rs  string.rs  utils.rs  vec.rs
rust/playground-serde-wasm-bindgen/src/types/: enum_ast.rs  scalars.rs  string.rs  vec.rs
rust/playground-wasm-bindgen/: Cargo.toml
rust/playground-wasm-bindgen/src/: functions.rs  types.rs
rust/playground-wasm-bindgen/src/functions/: number.rs  option.rs  result.rs  scalars.rs  string.rs  unsupported.rs  vec.rs
rust/playground-wasm-bindgen/src/types/: enum_c.rs  option.rs  scalars.rs  string.rs  vec.rs
rust/playground-wasm-tsify/: Cargo.toml
rust/playground-wasm-tsify/src/: functions.rs  types.rs
rust/playground-wasm-tsify/src/functions/: enum_ast.rs  enum_c.rs  map.rs  scalars.rs  string.rs  unsupported.rs  vec.rs
rust/playground-wasm-tsify/src/types/: enum_ast.rs  enum_c.rs  option.rs  scalars.rs  string.rs  unsupported.rs  vec.rs
